internal/fixtures/architecture/negative/secret-python-docstring/apps/api/src/deepwork_api/domain/bad.py
"""Unsafe retained examples: AKIAABCDEFGHIJKLMNOP and -----BEGIN PRIVATE KEY-----."""

VALUE = "synthetic"
